--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
     "@angular/platform-browser": "2.4.8",
     "@angular/platform-browser-dynamic": "2.4.8",
     "@angular/platform-server": "2.4.8",
-    "@ionic-native/core": "3.1.0",
+    "@ionic-native/core": "^4.16.0",
     "@ionic-native/keyboard": "^3.4.4",
     "@ionic-native/splash-screen": "3.1.0",
     "@ionic-native/status-bar": "3.1.0",
     "@ionic/storage": "2.0.0",
+    "angular": "^1.7.5",
     "chart.js": "^2.5.0",
     "ionic-angular": "2.3.0",
     "ionicons": "3.0.0",
@@ -33,8 +34,8 @@
     "zone.js": "0.7.2"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "1.1.4",
-    "typescript": "2.0.9"
+    "@ionic/app-scripts": "^3.2.0",
+    "typescript": "2.3.4"
   },
   "cordovaPlugins": [
     "cordova-plugin-whitelist",
